syntax = "proto3";
package api.v1;

import "google/protobuf/empty.proto";
import "x/go/control/control.proto";
import "x/go/errors/errors.proto";
import "x/go/telem/telem.proto";

option go_package = "github.com/synnaxlabs/synnax/pkg/api/grpc/v1";

message Frame {
  repeated uint32 keys = 1;
  repeated telem.PBSeries series = 2;
}

service FrameIteratorService {
  rpc Exec(stream FrameIteratorRequest) returns (stream FrameIteratorResponse) {}
}

service FrameWriterService {
  rpc Exec(stream FrameWriterRequest) returns (stream FrameWriterResponse) {}
}

service FrameStreamerService {
  rpc Exec(stream FrameStreamerRequest) returns (stream FrameStreamerResponse) {}
}

message FrameIteratorRequest {
  int32 command = 1;
  int64 span = 2;
  telem.PBTimeRange range = 3;
  int64 stamp = 4;
  repeated uint32 keys = 5;
  int64 chunk_size = 6;
}

message FrameIteratorResponse {
  int32 variant = 1;
  int32 command = 2;
  Frame frame = 3;
  int32 node_key = 4;
  bool ack = 5;
  int32 seq_num = 6;
  errors.PBPayload error = 7;
}

message FrameWriterConfig {
  repeated uint32 keys = 1;
  repeated uint32 authorities = 2;
  int64 start = 3;
  control.ControlSubject control_subject = 4;
  int32 mode = 5;
  bool enable_auto_commit = 6;
  int64 auto_index_persist_interval = 7;
  bool err_on_unauthorized = 8;
}

message FrameWriterRequest {
  int32 command = 1;
  FrameWriterConfig config = 2;
  Frame frame = 3;
  bytes buffer = 4;
}

message FrameWriterResponse {
  int32 command = 1;
  int32 node_key = 2;
  int32 counter = 3;
  errors.PBPayload error = 4;
  int64 end = 5;
}

message FrameStreamerRequest {
  repeated uint32 keys = 1;
  int32 downsample_factor = 2;
  bool enable_experimental_codec = 3;
}

message FrameStreamerResponse {
  Frame frame = 1;
  bytes buffer = 2;
}

service FrameDeleteService {
  rpc Exec(FrameDeleteRequest) returns (google.protobuf.Empty) {}
}

message FrameDeleteRequest {
  repeated uint32 keys = 1;
  repeated string names = 2;
  telem.PBTimeRange bounds = 3;
}
